--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
             class='form-input'
             required
             ng-model="ctrl.bookAuthor" />
+
+          <input
+            type="text"
+            placeholder='Post title'
+            class='form-input'
+            ng-model="ctrl.post.title" />
         </div>
 
         <button type='submit' class='button button-primary'>Send</button>
@@ -58,11 +64,14 @@
 
 
   <script src="./vendor/angular.min.js"></script>
+  <script src="./vendor/angular-resource.min.js"></script>
   <script src="./src/module.js"></script>
   <script src="./src/mainController.js"></script>
   <script src="./src/appStateService.js"></script>
 
   <script src="./src/models/book.js"></script>
   <script src="./vendor/angular-model.js"></script>
+
+  <script src="./src/models/post.js"></script>
 </body>
 </html>
